--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "syntax",
     "japan"
   ],
-  "repository": "https://github.com/pathtrk/ariake-dark-syntax",
+  "repository": "git@github.com:pathtrk/ariake-dark-syntax.git",
   "license": "MIT",
   "engines": {
     "atom": ">=1.13.0"
